# rust-weather-service

./: Cargo.toml  Dockerfile  Readme.md
cfg/: config.json
src/: lib.rs  main.rs
src/app/: forecast.rs  mod.rs
src/app/provider/: mod.rs
src/app/provider/apixu/: mod.rs  test.rs
src/app/provider/utils/: mod.rs
src/app/provider/yahoo/: mod.rs  test.rs
src/web/: mod.rs  test.rs
src/web/action/: mod.rs  on_date.rs  on_week.rs
