[package]
name = "weather_service"
version = "0.1.0"
authors = ["KD <godzie@yandex.ru>"]
edition = "2018"

[dependencies]
env_logger = "*"

actix = "0.7"
actix-web = { version="^0.7", features=["ssl"] }
futures = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

uuid = { version = "0.7", features = ["v4"] }

failure = "0.1.5"

rand = "0.6.5"
rust-crypto = "^0.2"
base64 = "0.10.1"
url = "1.7.2"
chrono = "0.4.6"
chrono-tz = "0.5"
time = "0.1.42"
bytes = "0.4"
log = "0.4.6"
config = "0.9"